Stop gap measure for feature background images on ipad

--- a/css/hackfest.css
+++ b/css/hackfest.css
@@ -51,6 +51,7 @@ body {
 
 .safari .feature {
     background-attachment: local;
+    background-position: center;
     background-size: 100%;
 }
 
